# minimal-icu-collation

./: .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  example.cpp  sort.cpp
amalgamation/: CMakeLists.txt  icu-collate.hpp
icu/: CMakeLists.txt  Makefile  example.cpp
icu/common/: dictionarydata.cpp  locdspnm.cpp  loclikelysubtags.cpp  putil.cpp  static_unicode_sets.cpp  static_unicode_sets.h  ucasemap.cpp  uchar.cpp  ucnv_bld.h  ucnv_cnv.h  ucnv_ct.cpp  ucnv_err.cpp  ucnv_ext.cpp  ucnv_ext.h  ucnv_imp.h  ucnv_lmb.cpp  ucnv_u7.cpp  ucnvbocu.cpp  ucnvhz.cpp  ucnvisci.cpp  ucnvmbcs.h  umutablecptrie.cpp  unifiedcache.cpp  uniset.cpp  uniset_props.cpp  unistr.cpp
icu/common/unicode/: brkiter.h  ucnv.h  uconfig.h
icu/i18n/: alphaindex.cpp  buddhcal.cpp  dayperiodrules.cpp  decContext.h  decNumber.cpp  decNumber.h  decNumberLocal.h  dtptngen.cpp  ethpccal.cpp  gregocal.cpp  hebrwcal.cpp  indiancal.cpp  number_fluent.cpp  number_mapper.cpp  number_multiplier.cpp  number_patternstring.cpp  numrange_fluent.cpp  persncal.cpp  plurrule_impl.h  rbnf.cpp  search.cpp  selfmtimpl.h  smpdtfmt.cpp  taiwncal.cpp  tzgnames.cpp  tznames.cpp  tznames_impl.cpp  ucol_res.cpp  vtzone.cpp  windtfmt.cpp  winnmfmt.cpp
icu/i18n/unicode/: rbnf.h  smpdtfmt.h
scripts/: amalgamation.py  extract-icu.py  inline-data.py
test/: CMakeLists.txt  test.cpp  timezone.cpp
